// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NGLContainer Should match the default snapshot when hooked up to a redux store. 1`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
>
  <Connect(NGLContainerClass)>
    <NGLContainerClass
      addCandidateResidues={[Function]}
      addHoveredResidues={[Function]}
      addLockedResiduePair={[Function]}
      candidateResidues={Array []}
      dispatchNglFetch={[Function]}
      experimentalProteins={Array []}
      hoveredResidues={Array []}
      hoveredSecondaryStructures={Array []}
      isDataLoading={false}
      lockedResiduePairs={Immutable.Map {}}
      maxPDBPerPopup={5}
      measuredProximity="C-α"
      predictedProteins={Array []}
      removeAllLockedResiduePairs={[Function]}
      removeCandidateResidues={[Function]}
      removeHoveredResidues={[Function]}
      removeLockedResiduePair={[Function]}
      removeNonLockedResidues={[Function]}
      selectedSecondaryStructures={Array []}
      showConfigurations={true}
    >
      <Grid
        padded={true}
      >
        <div
          className="ui padded grid"
        >
          <GridRow>
            <div
              className="row"
            >
              <NGLComponent
                addCandidateResidues={[Function]}
                addHoveredResidues={[Function]}
                addLockedResiduePair={[Function]}
                backgroundColor="#ffffff"
                candidateResidues={Array []}
                dispatchNglFetch={[Function]}
                experimentalProteins={Array []}
                height="92%"
                hoveredResidues={Array []}
                hoveredSecondaryStructures={Array []}
                isDataLoading={false}
                lockedResiduePairs={Object {}}
                maxPDBPerPopup={5}
                measuredProximity="C-α"
                menuItems={
                  Array [
                    Object {
                      "component": Object {
                        "name": "POPUP",
                        "props": Object {
                          "children": <Grid
                            divided={true}
                            padded={true}
                          >
                            <GridRow>
                              <GridColumn>
                                <Header>
                                  Select Structures to Display
                                </Header>
                              </GridColumn>
                            </GridRow>
                            <GridRow
                              style={
                                Object {
                                  "padding": "5px 0",
                                }
                              }
                            >
                              <GridColumn
                                width={9}
                              >
                                Experimental (0/0)
                                <div
                                  style={
                                    Object {
                                      "height": "250px",
                                      "overflow": "auto",
                                    }
                                  }
                                >
                                  <Table
                                    as="table"
                                    basic="very"
                                    compact={true}
                                    padded={true}
                                  >
                                    <TableHeader
                                      as="thead"
                                    >
                                      <TableRow
                                        as="tr"
                                        cellAs="td"
                                      >
                                        <TableHeaderCell
                                          as="th"
                                          style={
                                            Object {
                                              "padding": "5px 0",
                                            }
                                          }
                                        >
                                          Name
                                        </TableHeaderCell>
                                        <TableHeaderCell
                                          as="th"
                                          style={
                                            Object {
                                              "padding": "5px 0",
                                            }
                                          }
                                        >
                                          Seq. ID
                                        </TableHeaderCell>
                                        <TableHeaderCell
                                          as="th"
                                          style={
                                            Object {
                                              "padding": "5px 0",
                                            }
                                          }
                                        >
                                          Source
                                        </TableHeaderCell>
                                      </TableRow>
                                    </TableHeader>
                                    <TableBody
                                      as="tbody"
                                    />
                                  </Table>
                                </div>
                              </GridColumn>
                              <GridColumn
                                width={6}
                              >
                                Predicted (0/0)
                                <div
                                  style={
                                    Object {
                                      "height": "250px",
                                      "overflow": "auto",
                                    }
                                  }
                                >
                                  <Table
                                    as="table"
                                    basic="very"
                                    compact={true}
                                    padded={true}
                                  >
                                    <TableHeader
                                      as="thead"
                                    >
                                      <TableRow
                                        as="tr"
                                        cellAs="td"
                                      >
                                        <TableHeaderCell
                                          as="th"
                                          style={
                                            Object {
                                              "padding": "5px 0",
                                            }
                                          }
                                        >
                                          Name
                                        </TableHeaderCell>
                                        <TableHeaderCell
                                          as="th"
                                          style={
                                            Object {
                                              "padding": "5px 0",
                                            }
                                          }
                                        >
                                          Rank
                                        </TableHeaderCell>
                                      </TableRow>
                                    </TableHeader>
                                    <TableBody
                                      as="tbody"
                                    />
                                  </Table>
                                </div>
                              </GridColumn>
                            </GridRow>
                          </Grid>,
                          "disabled": true,
                          "wide": "very",
                        },
                      },
                      "description": "PDB Selector",
                      "iconName": "tasks",
                    },
                  ]
                }
                onMeasuredProximityChange={[Function]}
                onResize={[Function]}
                predictedProteins={Array []}
                removeAllLockedResiduePairs={[Function]}
                removeCandidateResidues={[Function]}
                removeHoveredResidues={[Function]}
                removeLockedResiduePair={[Function]}
                removeNonLockedResidues={[Function]}
                selectedSecondaryStructures={Array []}
                showConfigurations={true}
                width="100%"
              >
                <ComponentCard
                  componentName="NGL Viewer"
                  frameHeight={0}
                  frameWidth={0}
                  headerHeight={40}
                  height="570px"
                  iconSrc="assets/icons/spring-icon.png"
                  isFramedComponent={false}
                  isFullPage={false}
                  menuItems={
                    Array [
                      Object {
                        "component": Object {
                          "name": "POPUP",
                          "props": Object {
                            "children": <Grid
                              divided={true}
                              padded={true}
                            >
                              <GridRow>
                                <GridColumn>
                                  <Header>
                                    Select Structures to Display
                                  </Header>
                                </GridColumn>
                              </GridRow>
                              <GridRow
                                style={
                                  Object {
                                    "padding": "5px 0",
                                  }
                                }
                              >
                                <GridColumn
                                  width={9}
                                >
                                  Experimental (0/0)
                                  <div
                                    style={
                                      Object {
                                        "height": "250px",
                                        "overflow": "auto",
                                      }
                                    }
                                  >
                                    <Table
                                      as="table"
                                      basic="very"
                                      compact={true}
                                      padded={true}
                                    >
                                      <TableHeader
                                        as="thead"
                                      >
                                        <TableRow
                                          as="tr"
                                          cellAs="td"
                                        >
                                          <TableHeaderCell
                                            as="th"
                                            style={
                                              Object {
                                                "padding": "5px 0",
                                              }
                                            }
                                          >
                                            Name
                                          </TableHeaderCell>
                                          <TableHeaderCell
                                            as="th"
                                            style={
                                              Object {
                                                "padding": "5px 0",
                                              }
                                            }
                                          >
                                            Seq. ID
                                          </TableHeaderCell>
                                          <TableHeaderCell
                                            as="th"
                                            style={
                                              Object {
                                                "padding": "5px 0",
                                              }
                                            }
                                          >
                                            Source
                                          </TableHeaderCell>
                                        </TableRow>
                                      </TableHeader>
                                      <TableBody
                                        as="tbody"
                                      />
                                    </Table>
                                  </div>
                                </GridColumn>
                                <GridColumn
                                  width={6}
                                >
                                  Predicted (0/0)
                                  <div
                                    style={
                                      Object {
                                        "height": "250px",
                                        "overflow": "auto",
                                      }
                                    }
                                  >
                                    <Table
                                      as="table"
                                      basic="very"
                                      compact={true}
                                      padded={true}
                                    >
                                      <TableHeader
                                        as="thead"
                                      >
                                        <TableRow
                                          as="tr"
                                          cellAs="td"
                                        >
                                          <TableHeaderCell
                                            as="th"
                                            style={
                                              Object {
                                                "padding": "5px 0",
                                              }
                                            }
                                          >
                                            Name
                                          </TableHeaderCell>
                                          <TableHeaderCell
                                            as="th"
                                            style={
                                              Object {
                                                "padding": "5px 0",
                                              }
                                            }
                                          >
                                            Rank
                                          </TableHeaderCell>
                                        </TableRow>
                                      </TableHeader>
                                      <TableBody
                                        as="tbody"
                                      />
                                    </Table>
                                  </div>
                                </GridColumn>
                              </GridRow>
                            </Grid>,
                            "disabled": true,
                            "wide": "very",
                          },
                        },
                        "description": "PDB Selector",
                        "iconName": "tasks",
                      },
                      Object {
                        "component": Object {
                          "configs": Array [
                            Object {
                              "name": "Clear Selections",
                              "onClick": [Function],
                              "type": "BUTTON",
                            },
                            Object {
                              "defaultOption": "Disable",
                              "name": "Zoom on Click",
                              "onChange": [Function],
                              "options": Array [
                                "Enable",
                                "Disable",
                              ],
                              "type": "RADIO",
                            },
                            Object {
                              "current": "CLOSEST",
                              "name": "Proximity Metric",
                              "onChange": [Function],
                              "options": Array [
                                "Closest",
                                "C-α",
                              ],
                              "type": "RADIO",
                            },
                            Object {
                              "current": "default",
                              "name": "Structure Representation Type",
                              "onChange": [Function],
                              "options": Array [
                                "Default",
                                "Spacefill",
                                "Backbone",
                                "Cartoon",
                                "Surface",
                                "Tube",
                              ],
                              "type": "RADIO",
                            },
                          ],
                          "name": "POPUP",
                          "props": Object {
                            "trigger": <Icon
                              as="i"
                              name="setting"
                            />,
                          },
                        },
                        "description": "Settings",
                      },
                    ]
                  }
                  padding={0}
                  showSettings={false}
                  width="525px"
                >
                  <Card
                    centered={true}
                    className="bioblocks-component-card"
                    style={
                      Object {
                        "height": "570px",
                        "maxWidth": "unset",
                        "width": "525px",
                      }
                    }
                  >
                    <div
                      className="ui centered card bioblocks-component-card"
                      onClick={[Function]}
                      style={
                        Object {
                          "height": "570px",
                          "maxWidth": "unset",
                          "width": "525px",
                        }
                      }
                    >
                      <ComponentMenuBar
                        componentName="NGL Viewer"
                        configurations={Array []}
                        height={40}
                        iconSrc="assets/icons/spring-icon.png"
                        isExpanded={false}
                        menuItems={
                          Array [
                            Object {
                              "component": Object {
                                "name": "POPUP",
                                "props": Object {
                                  "children": <Grid
                                    divided={true}
                                    padded={true}
                                  >
                                    <GridRow>
                                      <GridColumn>
                                        <Header>
                                          Select Structures to Display
                                        </Header>
                                      </GridColumn>
                                    </GridRow>
                                    <GridRow
                                      style={
                                        Object {
                                          "padding": "5px 0",
                                        }
                                      }
                                    >
                                      <GridColumn
                                        width={9}
                                      >
                                        Experimental (0/0)
                                        <div
                                          style={
                                            Object {
                                              "height": "250px",
                                              "overflow": "auto",
                                            }
                                          }
                                        >
                                          <Table
                                            as="table"
                                            basic="very"
                                            compact={true}
                                            padded={true}
                                          >
                                            <TableHeader
                                              as="thead"
                                            >
                                              <TableRow
                                                as="tr"
                                                cellAs="td"
                                              >
                                                <TableHeaderCell
                                                  as="th"
                                                  style={
                                                    Object {
                                                      "padding": "5px 0",
                                                    }
                                                  }
                                                >
                                                  Name
                                                </TableHeaderCell>
                                                <TableHeaderCell
                                                  as="th"
                                                  style={
                                                    Object {
                                                      "padding": "5px 0",
                                                    }
                                                  }
                                                >
                                                  Seq. ID
                                                </TableHeaderCell>
                                                <TableHeaderCell
                                                  as="th"
                                                  style={
                                                    Object {
                                                      "padding": "5px 0",
                                                    }
                                                  }
                                                >
                                                  Source
                                                </TableHeaderCell>
                                              </TableRow>
                                            </TableHeader>
                                            <TableBody
                                              as="tbody"
                                            />
                                          </Table>
                                        </div>
                                      </GridColumn>
                                      <GridColumn
                                        width={6}
                                      >
                                        Predicted (0/0)
                                        <div
                                          style={
                                            Object {
                                              "height": "250px",
                                              "overflow": "auto",
                                            }
                                          }
                                        >
                                          <Table
                                            as="table"
                                            basic="very"
                                            compact={true}
                                            padded={true}
                                          >
                                            <TableHeader
                                              as="thead"
                                            >
                                              <TableRow
                                                as="tr"
                                                cellAs="td"
                                              >
                                                <TableHeaderCell
                                                  as="th"
                                                  style={
                                                    Object {
                                                      "padding": "5px 0",
                                                    }
                                                  }
                                                >
                                                  Name
                                                </TableHeaderCell>
                                                <TableHeaderCell
                                                  as="th"
                                                  style={
                                                    Object {
                                                      "padding": "5px 0",
                                                    }
                                                  }
                                                >
                                                  Rank
                                                </TableHeaderCell>
                                              </TableRow>
                                            </TableHeader>
                                            <TableBody
                                              as="tbody"
                                            />
                                          </Table>
                                        </div>
                                      </GridColumn>
                                    </GridRow>
                                  </Grid>,
                                  "disabled": true,
                                  "wide": "very",
                                },
                              },
                              "description": "PDB Selector",
                              "iconName": "tasks",
                            },
                            Object {
                              "component": Object {
                                "configs": Array [
                                  Object {
                                    "name": "Clear Selections",
                                    "onClick": [Function],
                                    "type": "BUTTON",
                                  },
                                  Object {
                                    "defaultOption": "Disable",
                                    "name": "Zoom on Click",
                                    "onChange": [Function],
                                    "options": Array [
                                      "Enable",
                                      "Disable",
                                    ],
                                    "type": "RADIO",
                                  },
                                  Object {
                                    "current": "CLOSEST",
                                    "name": "Proximity Metric",
                                    "onChange": [Function],
                                    "options": Array [
                                      "Closest",
                                      "C-α",
                                    ],
                                    "type": "RADIO",
                                  },
                                  Object {
                                    "current": "default",
                                    "name": "Structure Representation Type",
                                    "onChange": [Function],
                                    "options": Array [
                                      "Default",
                                      "Spacefill",
                                      "Backbone",
                                      "Cartoon",
                                      "Surface",
                                      "Tube",
                                    ],
                                    "type": "RADIO",
                                  },
                                ],
                                "name": "POPUP",
                                "props": Object {
                                  "trigger": <Icon
                                    as="i"
                                    name="setting"
                                  />,
                                },
                              },
                              "description": "Settings",
                            },
                          ]
                        }
                        onExpandToggleCb={[Function]}
                        width="100%"
                      >
                        <div
                          onMouseEnter={[Function]}
                          onMouseLeave={[Function]}
                        >
                          <Menu
                            secondary={true}
                            style={
                              Object {
                                "height": 40,
                                "margin": 0,
                              }
                            }
                            widths={2}
                          >
                            <div
                              className="ui secondary two item menu"
                              style={
                                Object {
                                  "height": 40,
                                  "margin": 0,
                                }
                              }
                            >
                              <Menu
                                secondary={true}
                                widths={1}
                              >
                                <div
                                  className="ui secondary one item menu"
                                >
                                  <MenuItem
                                    fitted="horizontally"
                                    position="left"
                                    style={
                                      Object {
                                        "margin": 0,
                                        "padding": 0,
                                      }
                                    }
                                  >
                                    <div
                                      className="left horizontally fitted item"
                                      onClick={[Function]}
                                      style={
                                        Object {
                                          "margin": 0,
                                          "padding": 0,
                                        }
                                      }
                                    >
                                      <img
                                        alt="component icon"
                                        src="assets/icons/spring-icon.png"
                                        style={
                                          Object {
                                            "height": "32px",
                                            "padding": "2px",
                                            "width": "32px",
                                          }
                                        }
                                      />
                                      NGL Viewer
                                    </div>
                                  </MenuItem>
                                </div>
                              </Menu>
                              <Menu
                                secondary={true}
                                widths={4}
                              >
                                <div
                                  className="ui secondary four item menu"
                                >
                                  <MenuItem
                                    fitted="horizontally"
                                    key="NGL Viewer-menu-item-0"
                                    position="right"
                                    style={
                                      Object {
                                        "flexDirection": "column",
                                      }
                                    }
                                  >
                                    <div
                                      className="right horizontally fitted item"
                                      onClick={[Function]}
                                      style={
                                        Object {
                                          "flexDirection": "column",
                                        }
                                      }
                                    >
                                      <Popup
                                        closeOnPortalMouseLeave={false}
                                        closeOnTriggerClick={true}
                                        closeOnTriggerMouseLeave={false}
                                        disabled={true}
                                        hoverable={false}
                                        keepInViewPort={true}
                                        on="hover"
                                        openOnTriggerClick={true}
                                        openOnTriggerFocus={false}
                                        openOnTriggerMouseEnter={false}
                                        position="bottom center"
                                        trigger={
                                          <Icon
                                            as="i"
                                            name="tasks"
                                          />
                                        }
                                        wide="very"
                                      >
                                        <Icon
                                          as="i"
                                          name="tasks"
                                        >
                                          <i
                                            aria-hidden="true"
                                            className="tasks icon"
                                            onClick={[Function]}
                                          />
                                        </Icon>
                                      </Popup>
                                      <span
                                        style={
                                          Object {
                                            "fontSize": "11px",
                                            "visibility": "hidden",
                                          }
                                        }
                                      >
                                        PDB Selector
                                      </span>
                                    </div>
                                  </MenuItem>
                                  <MenuItem
                                    fitted="horizontally"
                                    key="NGL Viewer-menu-item-1"
                                    position="right"
                                    style={
                                      Object {
                                        "flexDirection": "column",
                                      }
                                    }
                                  >
                                    <div
                                      className="right horizontally fitted item"
                                      onClick={[Function]}
                                      style={
                                        Object {
                                          "flexDirection": "column",
                                        }
                                      }
                                    >
                                      <Popup
                                        closeOnPortalMouseLeave={false}
                                        closeOnTriggerClick={true}
                                        closeOnTriggerMouseLeave={false}
                                        disabled={false}
                                        hoverable={false}
                                        keepInViewPort={true}
                                        on="hover"
                                        openOnTriggerClick={true}
                                        openOnTriggerFocus={false}
                                        openOnTriggerMouseEnter={false}
                                        position="bottom center"
                                        trigger={
                                          <Icon
                                            as="i"
                                            name="setting"
                                          />
                                        }
                                        wide={true}
                                      >
                                        <Portal
                                          closeOnDocumentClick={true}
                                          closeOnEscape={true}
                                          closeOnPortalMouseLeave={false}
                                          closeOnTriggerClick={true}
                                          closeOnTriggerMouseLeave={false}
                                          eventPool="default"
                                          mouseEnterDelay={50}
                                          mouseLeaveDelay={70}
                                          onClose={[Function]}
                                          onMount={[Function]}
                                          onOpen={[Function]}
                                          onUnmount={[Function]}
                                          openOnTriggerClick={true}
                                          openOnTriggerFocus={false}
                                          openOnTriggerMouseEnter={false}
                                          trigger={
                                            <Icon
                                              as="i"
                                              name="setting"
                                            />
                                          }
                                          triggerRef={[Function]}
                                        >
                                          <Ref
                                            innerRef={[Function]}
                                          >
                                            <RefFindNode
                                              innerRef={[Function]}
                                            >
                                              <Icon
                                                as="i"
                                                name="setting"
                                                onBlur={[Function]}
                                                onClick={[Function]}
                                                onFocus={[Function]}
                                                onMouseEnter={[Function]}
                                                onMouseLeave={[Function]}
                                              >
                                                <i
                                                  aria-hidden="true"
                                                  className="setting icon"
                                                  onBlur={[Function]}
                                                  onClick={[Function]}
                                                  onFocus={[Function]}
                                                  onMouseEnter={[Function]}
                                                  onMouseLeave={[Function]}
                                                />
                                              </Icon>
                                            </RefFindNode>
                                          </Ref>
                                        </Portal>
                                      </Popup>
                                      <span
                                        style={
                                          Object {
                                            "fontSize": "11px",
                                            "visibility": "hidden",
                                          }
                                        }
                                      >
                                        Settings
                                      </span>
                                    </div>
                                  </MenuItem>
                                  <MenuItem
                                    fitted="horizontally"
                                    position="right"
                                    style={
                                      Object {
                                        "flexDirection": "column",
                                      }
                                    }
                                  >
                                    <div
                                      className="right horizontally fitted item"
                                      onClick={[Function]}
                                      style={
                                        Object {
                                          "flexDirection": "column",
                                        }
                                      }
                                    >
                                      <Icon
                                        as="i"
                                        name="expand arrows alternate"
                                        onClick={[Function]}
                                      >
                                        <i
                                          aria-hidden="true"
                                          className="expand arrows alternate icon"
                                          onClick={[Function]}
                                        />
                                      </Icon>
                                      <span
                                        style={
                                          Object {
                                            "fontSize": "11px",
                                            "visibility": "hidden",
                                          }
                                        }
                                      >
                                        Expand
                                      </span>
                                    </div>
                                  </MenuItem>
                                </div>
                              </Menu>
                            </div>
                          </Menu>
                        </div>
                      </ComponentMenuBar>
                      <div
                        className="NGLComponent"
                        style={
                          Object {
                            "height": "92%",
                            "width": "100%",
                          }
                        }
                      >
                        <Dimmer
                          active={false}
                        >
                          <DimmerInner
                            active={false}
                          >
                            <Ref
                              innerRef={
                                Object {
                                  "current": <div
                                    class="ui dimmer"
                                  >
                                    <div
                                      class="content"
                                    >
                                      <div
                                        class="ui loader"
                                      />
                                    </div>
                                  </div>,
                                }
                              }
                            >
                              <RefFindNode
                                innerRef={
                                  Object {
                                    "current": <div
                                      class="ui dimmer"
                                    >
                                      <div
                                        class="content"
                                      >
                                        <div
                                          class="ui loader"
                                        />
                                      </div>
                                    </div>,
                                  }
                                }
                              >
                                <div
                                  className="ui dimmer"
                                  onClick={[Function]}
                                >
                                  <div
                                    className="content"
                                  >
                                    <Loader>
                                      <div
                                        className="ui loader"
                                      />
                                    </Loader>
                                  </div>
                                </div>
                              </RefFindNode>
                            </Ref>
                          </DimmerInner>
                        </Dimmer>
                        <div
                          className="NGLCanvas"
                          onKeyDown={[Function]}
                          onMouseLeave={[Function]}
                          role="img"
                          style={
                            Object {
                              "height": "100%",
                              "width": "100%",
                            }
                          }
                        />
                      </div>
                      <div
                        style={
                          Object {
                            "bottom": "20px",
                            "position": "absolute",
                            "right": "20px",
                            "userSelect": "none",
                          }
                        }
                      >
                        <a
                          aria-pressed={false}
                          onClick={[Function]}
                          role="button"
                        >
                          Superposition: off
                        </a>
                      </div>
                    </div>
                  </Card>
                </ComponentCard>
              </NGLComponent>
            </div>
          </GridRow>
        </div>
      </Grid>
    </NGLContainerClass>
  </Connect(NGLContainerClass)>
</Provider>
`;

exports[`NGLContainer Should match the default snapshot when not hooked up to a redux store. 1`] = `
<Grid
  padded={true}
>
  <GridRow>
    <NGLComponent
      addCandidateResidues={[Function]}
      addHoveredResidues={[Function]}
      addLockedResiduePair={[Function]}
      backgroundColor="#ffffff"
      candidateResidues={Array []}
      dispatchNglFetch={[Function]}
      experimentalProteins={Array []}
      height="92%"
      hoveredResidues={Array []}
      hoveredSecondaryStructures={Array []}
      isDataLoading={false}
      lockedResiduePairs={Object {}}
      maxPDBPerPopup={5}
      measuredProximity="C-α"
      menuItems={
        Array [
          Object {
            "component": Object {
              "name": "POPUP",
              "props": Object {
                "children": <Grid
                  divided={true}
                  padded={true}
                >
                  <GridRow>
                    <GridColumn>
                      <Header>
                        Select Structures to Display
                      </Header>
                    </GridColumn>
                  </GridRow>
                  <GridRow
                    style={
                      Object {
                        "padding": "5px 0",
                      }
                    }
                  >
                    <GridColumn
                      width={9}
                    >
                      Experimental (0/0)
                      <div
                        style={
                          Object {
                            "height": "250px",
                            "overflow": "auto",
                          }
                        }
                      >
                        <Table
                          as="table"
                          basic="very"
                          compact={true}
                          padded={true}
                        >
                          <TableHeader
                            as="thead"
                          >
                            <TableRow
                              as="tr"
                              cellAs="td"
                            >
                              <TableHeaderCell
                                as="th"
                                style={
                                  Object {
                                    "padding": "5px 0",
                                  }
                                }
                              >
                                Name
                              </TableHeaderCell>
                              <TableHeaderCell
                                as="th"
                                style={
                                  Object {
                                    "padding": "5px 0",
                                  }
                                }
                              >
                                Seq. ID
                              </TableHeaderCell>
                              <TableHeaderCell
                                as="th"
                                style={
                                  Object {
                                    "padding": "5px 0",
                                  }
                                }
                              >
                                Source
                              </TableHeaderCell>
                            </TableRow>
                          </TableHeader>
                          <TableBody
                            as="tbody"
                          />
                        </Table>
                      </div>
                    </GridColumn>
                    <GridColumn
                      width={6}
                    >
                      Predicted (0/0)
                      <div
                        style={
                          Object {
                            "height": "250px",
                            "overflow": "auto",
                          }
                        }
                      >
                        <Table
                          as="table"
                          basic="very"
                          compact={true}
                          padded={true}
                        >
                          <TableHeader
                            as="thead"
                          >
                            <TableRow
                              as="tr"
                              cellAs="td"
                            >
                              <TableHeaderCell
                                as="th"
                                style={
                                  Object {
                                    "padding": "5px 0",
                                  }
                                }
                              >
                                Name
                              </TableHeaderCell>
                              <TableHeaderCell
                                as="th"
                                style={
                                  Object {
                                    "padding": "5px 0",
                                  }
                                }
                              >
                                Rank
                              </TableHeaderCell>
                            </TableRow>
                          </TableHeader>
                          <TableBody
                            as="tbody"
                          />
                        </Table>
                      </div>
                    </GridColumn>
                  </GridRow>
                </Grid>,
                "disabled": true,
                "wide": "very",
              },
            },
            "description": "PDB Selector",
            "iconName": "tasks",
          },
        ]
      }
      onMeasuredProximityChange={[Function]}
      onResize={[Function]}
      predictedProteins={Array []}
      removeAllLockedResiduePairs={[Function]}
      removeCandidateResidues={[Function]}
      removeHoveredResidues={[Function]}
      removeLockedResiduePair={[Function]}
      removeNonLockedResidues={[Function]}
      selectedSecondaryStructures={Array []}
      showConfigurations={true}
      width="100%"
    />
  </GridRow>
</Grid>
`;
